[package]
name = "z-sync"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "notify"
harness = false

[[bench]]
name = "lock"
harness = false

[features]
default = ["std", "thin-vec"]
std = ["dep:parking_lot_core"]

thin-vec = ["dep:thin-vec"]

[dependencies]
pin-project-lite = "0.2"
num-traits = { version = "0.2", default-features = false }
parking_lot_core = { version = "0.9", optional = true }
crossbeam-utils = { version = "0.8", default-features = false }

thin-vec = { version = "0.2", optional = true }

[dev-dependencies]
criterion = { version = "0.8", features = ["async_tokio"] }
tokio = { version = "1", features = ["full"] }
event-listener = "5.4"
parking_lot = "0.12"
